--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-plugin-styled-components": "1.12.0",
     "bignumber.js": "9.0.1",
     "customize-cra": "1.0.0",
+    "express": "4.17.3",
     "fast-deep-equal": "3.1.3",
     "fs-extra": "10.0.0",
+    "helmet": "5.0.2",
     "is-mobile": "3.0.0",
     "lodash": "4.17.21",
     "lodash-move": "1.1.1",
@@ -61,7 +63,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint ./",
-    "eslint:fix": "eslint --fix ./"
+    "eslint:fix": "eslint --fix ./",
+    "pm:start": "yarn pm2 start process.json",
+    "pm:restart-ui": "yarn pm2 restart ui",
+    "pm:stop": "yarn pm2 stop all",
+    "pm:delete": "yarn pm2 delete all"
   },
   "eslintConfig": {
     "extends": "react-app"
