Always display coinbase wallet (#15)
* Make coinbase always visible

* Update submodule

* Fix ci

* Update submodule

--- a/.eslintrc
+++ b/.eslintrc
@@ -46,6 +46,7 @@
       }],
       "prettier/prettier": ["error"],
       "react/display-name": 0,
+      "react/no-array-index-key": 0,
       "import/no-cycle": 0
     }
 }
