--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@binance-chain/bsc-connector": "1.0.0",
+    "@coinbase/wallet-sdk": "3.0.5",
     "@fontsource/roboto-mono": "4.2.2",
     "@fortawesome/fontawesome-svg-core": "1.2.34",
     "@fortawesome/free-brands-svg-icons": "5.15.3",
