--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && mv build prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint": "eslint ./",
