--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "fast-deep-equal": "3.1.3",
     "fs-extra": "10.0.0",
     "helmet": "5.0.2",
+    "http": "0.0.1-security",
+    "https": "1.0.0",
     "is-mobile": "3.0.0",
     "lodash": "4.17.21",
     "lodash-move": "1.1.1",
