--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-styled-components": "1.12.0",
     "bignumber.js": "9.0.1",
     "customize-cra": "1.0.0",
+    "dotenv": "^16.0.3",
     "express": "4.17.3",
     "fast-deep-equal": "3.1.3",
     "fs-extra": "10.0.0",
