--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@binance-chain/bsc-connector": "1.0.0",
     "@coinbase/wallet-sdk": "3.0.5",
     "@ledgerhq/connect-kit-loader": "1.0.2",
+    "@ledgerhq/iframe-provider": "^0.4.3",
     "@fontsource/roboto-mono": "4.2.2",
     "@fortawesome/fontawesome-svg-core": "1.2.34",
     "@fortawesome/free-brands-svg-icons": "5.15.3",
@@ -60,7 +61,8 @@
     "use-deep-compare-effect": "1.6.1",
     "use-effect-with-previous": "1.0.7",
     "web3": "1.3.4",
-    "web3modal": "file:./submodules/web3modal"
+    "web3modal": "file:./submodules/web3modal",
+    "ethers": "5.7.2"
   },
   "scripts": {
     "start": "node server.js",
