--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "dependencies": {
     "@binance-chain/bsc-connector": "1.0.0",
     "@coinbase/wallet-sdk": "3.0.5",
-    "@ledgerhq/connect-kit-loader": "1.0.2",
-    "@ledgerhq/iframe-provider": "^0.4.3",
     "@fontsource/roboto-mono": "4.2.2",
     "@fortawesome/fontawesome-svg-core": "1.2.34",
     "@fortawesome/free-brands-svg-icons": "5.15.3",
@@ -18,6 +16,8 @@
     "@fortawesome/react-fontawesome": "0.1.14",
     "@gnosis.pm/safe-apps-sdk": "4.0.0",
     "@gnosis.pm/safe-apps-web3modal": "0.6.0",
+    "@ledgerhq/connect-kit-loader": "1.0.2",
+    "@ledgerhq/iframe-provider": "^0.4.3",
     "@react-hook/window-size": "3.0.7",
     "@walletconnect/web3-provider": "1.5.2",
     "axios": "0.21.1",
@@ -26,6 +26,7 @@
     "bignumber.js": "9.0.1",
     "customize-cra": "1.0.0",
     "dotenv": "^16.0.3",
+    "ethers": "5.7.2",
     "express": "4.17.3",
     "fast-deep-equal": "3.1.3",
     "fs-extra": "10.0.0",
@@ -61,8 +62,7 @@
     "use-deep-compare-effect": "1.6.1",
     "use-effect-with-previous": "1.0.7",
     "web3": "1.3.4",
-    "web3modal": "file:./submodules/web3modal",
-    "ethers": "5.7.2"
+    "web3modal": "file:./submodules/web3modal"
   },
   "scripts": {
     "start": "node server.js",
